--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "json-schema-to-typescript": "^9.1.0",
+    "json-to-ts": "^1.7.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
@@ -35,7 +38,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.8.3",
+    "typescript": "^3.8.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
